--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en-US">
     <head>
         <meta charset="utf-8">
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
             <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>About Pikes Peak Property Management</title>
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="CSS/style.css" />
     </head>
 
     <body>
