--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ if($_POST["submit"]) {
         <meta name="viewport" content="width=device-width, initial-scale=1">
             <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Contact Pikes Peak Property Management</title>
-        <link rel="stylesheet" href="css/style.css" />
+        <link rel="stylesheet" href="CSS/style.css" />
     </head>
 
     <body>
