Update casing on contact HTML

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@ if($_POST["submit"]) {
                     <p>(719)777-7777</p>
                     <p>(719)888-8888</p><br>
                     <figure class="contactMap" >
-                        <img src="images/birchwoodmap.png" alt="Pikes Peak Property Management Map" width="300px" height="300px">
+                        <img src="Images/birchwoodmap.png" alt="Pikes Peak Property Management Map" width="300px" height="300px">
                     </figure>
                 </div>
                 <section id="contactform">
