casing changes in index.html & css

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
             <section id="carousel">
 
                 <figure class="active">
-                    <img src="Images/birchwood/frontpic1.jpg" alt="Birchwood Picture" height="450px">
+                    <img src="images/birchwood/frontpic1.jpg" alt="Birchwood Picture" height="450px">
                 </figure>
                 <figure>
-                    <img src="Images/fountain terrace/frontpic1.jpg" alt="Fountain Terrace Picture" height="450px">
+                    <img src="images/fountain terrace/frontpic1.jpg" alt="Fountain Terrace Picture" height="450px">
                 </figure>
                 <figure>
-                    <img src="Images/pinewood/frontpic1.jpg" alt="Pinewood Picture" height="450px">
+                    <img src="images/pinewood/frontpic1.jpg" alt="Pinewood Picture" height="450px">
                 </figure>
                     <h2>Contact:</h2>
                     <p><strong>Address:</strong> 2470 Solarglen Drive</p>
