updated casing in properties.html

--- a/properties.html
+++ b/properties.html
@@ -37,7 +37,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
             <!--PROPERTY 1-->
             <div id="propSummary1" class="propertiesPic">
                 <figure>
-                    <img src="images/Birchwood/frontpic1.jpg" alt="property 1" onclick="loadBirchwood()">
+                    <img src="images/birchwood/frontpic1.jpg" alt="property 1" onclick="loadBirchwood()">
                 </figure>
                 <div class="propertiesDefinition">
                     <h4>Birchwood Apartments</h4>
@@ -46,7 +46,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
             <!--PROPERTY 2-->
             <div id="propSummary2" class="propertiesPic">
                 <figure>
-                    <img src="images/Fountain Terrace/frontpic1.jpg" alt="property 1" onclick="apartments2()">
+                    <img src="images/fountain terrace/frontpic1.jpg" alt="property 1" onclick="apartments2()">
                 </figure>
                 <div class="propertiesDefinition">
                     <h4>Fountain Terrace</h4>
@@ -55,7 +55,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
             <!--PROPERTY 3-->
             <div id="propSummary3" class="propertiesPic">
                 <figure>
-                    <img src="images/Pinewood/frontpic1.jpg" alt="property 1" onclick="apartments3()">
+                    <img src="images/pinewood/frontpic1.jpg" alt="property 1" onclick="apartments3()">
                 </figure>
                 <div class="propertiesDefinition">
                     <h4>Pinewood Village</h4>
@@ -106,13 +106,13 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                 <!--PROPERTY IMAGE-->
                 <div id="birchwoodImage">
                     <figure class="active">
-                        <img class="birchwoodPics" src="images/Birchwood/frontpic1.jpg" alt="property image">
+                        <img class="birchwoodPics" src="images/birchwood/frontpic1.jpg" alt="property image">
                     </figure>
                     <figure>
-                        <img class="birchwoodPics" src="images/Birchwood/frontpic2.jpg" alt="property image">
+                        <img class="birchwoodPics" src="images/birchwood/frontpic2.jpg" alt="property image">
                     </figure>
                     <figure>
-                        <img class="birchwoodPics" src="images/Birchwood/frontpic3.jpg" alt="property image">
+                        <img class="birchwoodPics" src="images/birchwood/frontpic3.jpg" alt="property image">
                     </figure>
                     <!--FULL GALLERY LINK-->
                     <h2 class="fullGalleryLink" onclick="pullBirchwoodGallery()">See Full Gallery</h2>
