gallery casing update v1

--- a/birchwoodgallery.html
+++ b/birchwoodgallery.html
@@ -19,22 +19,22 @@
                 <p id="mainGalleryLink" >Click picture to enlarge </p>
                 <table id="galleryTable">
                     <tr>
-                        <td><img src="images/Birchwood/frontpic1.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Birchwood/frontpic2.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Birchwood/frontpic3.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Birchwood/other front of property.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/birchwood/frontpic1.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/birchwood/frontpic2.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/birchwood/frontpic3.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/birchwood/other front of property.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
                     </tr>
                     <tr>
-                        <td><img src="images/Birchwood/courtyard.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Birchwood/courtyard 2.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Birchwood/new pool 1.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Birchwood/new pool 2.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/birchwood/courtyard.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/birchwood/courtyard 2.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/birchwood/new pool 1.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/birchwood/new pool 2.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
                     </tr>                
                     <tr>
-                        <td><img src="images/Birchwood/pool1.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Birchwood/pool2.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Birchwood/pool3.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Birchwood/laundry room.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/birchwood/pool1.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/birchwood/pool2.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/birchwood/pool3.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/birchwood/laundry room.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
                     </tr>
                 </table>   
             <div id="largeImagePanel">
