--- a/pinewoodgallery.html
+++ b/pinewoodgallery.html
@@ -19,22 +19,22 @@
                 <p id="mainGalleryLink" >Click picture to enlarge </p>
                 <table id="galleryTable">
                     <tr>
-                        <td><img src="images/Pinewood/frontpic1.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Pinewood/frontpic2.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Pinewood/frontpic3.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Pinewood/frontpic4.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/pinewood/frontpic1.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/pinewood/frontpic2.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/pinewood/frontpic3.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/pinewood/frontpic4.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
                     </tr>
                     <tr>
-                        <td><img src="images/Pinewood/frontpic5.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Pinewood/frontpic6.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Pinewood/frontpic7.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Pinewood/frontpic8.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/pinewood/frontpic5.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/pinewood/frontpic6.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/pinewood/frontpic7.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/pinewood/frontpic8.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
                     </tr>                
                     <tr>
-                        <td><img src="images/Pinewood/laundry.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Pinewood/Lg 1br kitchen.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Pinewood/PW one bedroom kitchen.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/Pinewood/SM 1BR kitchen.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/pinewood/laundry.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/pinewood/Lg 1br kitchen.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/pinewood/PW one bedroom kitchen.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/pinewood/SM 1BR kitchen.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
                     </tr>
                 </table>                                             
             <div id="largeImagePanel">
