ft gallery casing update

--- a/ftgallery.html
+++ b/ftgallery.html
@@ -27,13 +27,13 @@
                     <tr>
                         <td><img src="images/fountain terrace/frontpic5.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
                         <td><img src="images/fountain terrace/frontpic6.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/fountain terrace/FT building2.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/fountain terrace/FT Building2.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
                         <td><img src="images/fountain terrace/FT Courtyard.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
                     </tr>                
                     <tr>
                         <td><img src="images/fountain terrace/fountain.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
                         <td><img src="images/fountain terrace/fountain2.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
-                        <td><img src="images/fountain terrace/FT fitness.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
+                        <td><img src="images/fountain terrace/FT Fitness.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
                         <td><img src="images/fountain terrace/FT pool.jpg" alt="" height="120px" onclick="showImage(this.src)"></td>
                     </tr>
                 </table>                                           
