small properties update

--- a/properties.html
+++ b/properties.html
@@ -127,7 +127,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                             </li>
                             <li class="headamenity">Features
                                 <ul>
-                                    <li class="subamenity">High Speed Internett Access</li>
+                                    <li class="subamenity">High Speed Internet Access</li>
                                     <li class="subamenity">Smoke Free</li>
                                 </ul>
                             <li class="headamenity">Services
