add PPRE logo to floating box

--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
 
 <!--PICTURE BODY ELEMENT CONTAINING CHANGING PICTURES OF PPRE PROPERTIES////////////////////-->
             <h1 id="pikespeak">Colorado Springs Sample Picture</h1>
-            <div id="box"><h3>Pikes Peak Property Management Logo</h3></div>
+            <div id="box">
+                <img src="images/logo1" alt="PPRE Logo" height="100px" width="100px">
+            </div>
 
     
 <!--MAIN BODY WITH WELCOME LETTER, CASCADING PCITURES OF PROPERTIES & HOURS//////////////////-->
