finish PPRE hover Logo

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
 <!--PICTURE BODY ELEMENT CONTAINING CHANGING PICTURES OF PPRE PROPERTIES////////////////////-->
             <h1 id="pikespeak">Colorado Springs Sample Picture</h1>
             <div id="box">
-                <img src="images/logo1" alt="PPRE Logo" height="100px" width="100px">
+                <img src="images/logo1.png" alt="PPRE Logo" height="125px" width="280px">
             </div>
 
     
