--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
             <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>About Pikes Peak Property Management</title>
         <link rel="stylesheet" href="CSS/style.css" />
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>          
+        <script type= "text/javascript" src="js/properties2.js"></script>
     </head>
 
     <body>
@@ -62,6 +64,5 @@
         <footer>
                 <h5>Copyright 2016: Pikes Peak Property Management</h5>
         </footer>
-            <script type="text/javascript" src="js/index.js"></script>      
     </body>  
 </html>
