--- a/properties.html
+++ b/properties.html
@@ -11,6 +11,7 @@
         <link rel="stylesheet" href="CSS/style.css" />    
         <!-- Bootstrap -->
         <!--<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>          
     </head>
     <body>
         <section id="innerbodymin">
@@ -304,6 +305,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
         <footer id="movePageLower">
                 <h5>Copyright 2016: Pikes Peak Property Management</h5>
         </footer>
-            <script type="text/javascript" src="js/properties.js"></script>
+        <script       
+        <script src="js/properties.js"></script>
     </body>
 </html>
