--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,9 @@ if($_POST["submit"]) {
             <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Contact Pikes Peak Property Management</title>
         <link rel="stylesheet" href="CSS/style.css" />
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>  
+        <script src="js/jQuery/jquery-ui.min.js"></script>        
+        <script type="text/javascript" src="js/index.js"></script>
     </head>
 
     <body>
@@ -88,6 +91,5 @@ if($_POST["submit"]) {
         <footer>
                 <h5>Copyright 2016: Pikes Peak Property Management</h5>
         </footer>
-            <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
