--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link rel="stylesheet" href="CSS/style.css" />    
         <!-- Bootstrap -->
         <!--<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
     </head>
 
 
@@ -99,9 +101,5 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
         <footer>
                 <h5>Copyright 2016: Pikes Peak Property Management</h5>
         </footer>
-            <!--JQUERY LOCAL FILE-->
-            <script src="js/jQuery/jquery-3.1.1.js"></script>
-            <!--JAVASCRIPT BUILT ON MY OWN-->
-            <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
