--- a/properties.html
+++ b/properties.html
@@ -7,11 +7,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
             <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-        <title>Pikes Peak Property Management Home Page</title>
+        <title>Pikes Peak Property Management Properties</title>
         <link rel="stylesheet" href="CSS/style.css" />    
-        <!-- Bootstrap -->
-        <!--<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
-        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>          
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script> 
     </head>
     <body>
         <section id="innerbodymin">
@@ -304,8 +302,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
 <!--FOOTER OF PAGE///////////////////////////////////////////////////////////////////////////////-->
         <footer id="movePageLower">
                 <h5>Copyright 2016: Pikes Peak Property Management</h5>
-        </footer>
-        <script       
-        <script src="js/properties.js"></script>
+        </footer>  
+        <script src="js/properties.js"></script>  
     </body>
 </html>
