correction on properties display

--- a/properties.html
+++ b/properties.html
@@ -75,7 +75,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                 <div class="propInfo">
                     <!--TOP LEFT HEADING INFORMATION-->
                     <div class="propHeading">
-                        <h1>Birchwood Village Apartments</h1>
+                        <h1 id="movePageLower">Birchwood Village Apartments</h1>
                         <h2>3615-3618 E Uintah St.<br>Colorado Springs, CO 80909<br>(719) 777-7777</h2>
                         <!--CONTACT PROPERTY BUTTON-->
                         <form>
@@ -148,7 +148,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                 <div class="propInfo">
                     <!--TOP LEFT HEADING INFORMATION-->
                     <div class="propHeading">
-                        <h1>Fountain Terrace Apartments</h1>
+                        <h1 id="movePageLower2">Fountain Terrace Apartments</h1>
                         <h2>3209-3211 E Fountain Blvd<br>Colorado Springs, CO 80910<br>(719) 777-7777</h2>
                         <!--CONTACT PROPERTY BUTTON-->
                         <form>
@@ -219,14 +219,23 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                 <div class="propInfo">
                     <!--TOP LEFT HEADING INFORMATION-->
                     <div class="propHeading">
-                        <h1>Pinewood Village</h1>
+                        <h1 id="movePageLower3">Pinewood Village</h1>
                         <h2>3105 E Dale St<br>Colorado Springs, CO 80909<br>(719) 777-7777</h2>
                         <!--CONTACT PROPERTY BUTTON-->
                         <form>
                             <input type="button" id="contactProperty" value="Contact Property" onclick="pinewoodDirect()">
                         </form>
                         <!--PROPERTY SUMMARY INFORMAITON-->
-                        <p>This apartment community was built in 1971 and has 3 stories with 53 units. </p>
+                        <p>This apartment community was built in 1971 and has 3 stories with 53 units. 
+                            Pinewood Apartments located in Central Colorado Springs, We have spacious one & 
+                            two bedrooms Apartment homes with walk in closets and on-site Laundry. We are 
+                            only steps away from the Citadel Mall and other shopping. Come and make Pinewood 
+                            Apartments your home today!<br><br>As you search for your perfect apartment, please 
+                            keep in mind that rental rates (including specials and discounts) and availability 
+                            are very fluid in the apartment industry. Based on many factors, the rental rates 
+                            (including specials and discounts) and availability can actually change not just 
+                            daily, but hourly, if not even more quickly.
+                        </p>
                         <!--MAP-->
                         <div class="propMap">
                             <h2>Map</h2>
@@ -268,6 +277,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                             <li class="headamenity">Services
                                 <ul>
                                     <li class="subamenity">Laundry Facilities</li>
+                                    <li class="subamenity">Dogs & Cats Allowed</li>
                                 </ul>
                             </li>
                         </ul>
@@ -300,7 +310,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
             </section>
         </section>
 <!--FOOTER OF PAGE///////////////////////////////////////////////////////////////////////////////-->
-        <footer id="movePageLower">
+        <footer>
                 <h5>Copyright 2016: Pikes Peak Property Management</h5>
         </footer>  
         <script src="js/properties.js"></script>  
