update contact form action

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     </head>
 
     <body>
-        <section id="innerbody">
+        <section id="innerbodyabout">
         <header id="toplinks">
             <nav>
                 <ul>
