carousel styling change

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                     <ul id="slider">
                         <li class="slide">
                         <div class="slide-copy">
-                            <h2>Birchwood Village</h2>
+                            <h2 class="titleHeading4">Birchwood Village</h2>
                             <p>Birchwood Village apartment homes offers a great location. A minute from the Citadel 
                             Mall, other shopping, restaurants, and much much more.</p>
                         </div>
@@ -80,7 +80,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                         </li>
                         <li class="slide">
                         <div class="slide-copy">
-                            <h2>Fountain Terrace</h2>
+                            <h2 class="titleHeading4">Fountain Terrace</h2>
                             <p>Welcome to Fountain Terrace Apartments, a wonderful apartment community with everything you're looking 
                             for.</p>
                         </div>
@@ -88,7 +88,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                         </li>
                         <li class="slide">
                         <div class="slide-copy">
-                            <h2>Pinewood Apartments</h2>
+                            <h2 class="titleHeading4">Pinewood Apartments</h2>
                             <p>Pinewood Apartments located in Central Colorado Springs, We have spacious one & 
                             two bedrooms Apartment homes with walk in closets and on-site Laundry.</p>
                         </div>
