phone update etc.

--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,9 @@ if($_POST["submit"]) {
             <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Contact Pikes Peak Property Management</title>
         <link rel="stylesheet" href="CSS/style.css" />
+        <!-- google api -->
         <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>  
-        <script src="js/jQuery/jquery-ui.min.js"></script>        
+        <script src="js/jQuery/jquery-ui.min.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </head>
 
@@ -38,13 +39,12 @@ if($_POST["submit"]) {
             <main id="contactinfo">
                 <div id="contactcompanyinfo">
                     <h2 class="titleHeading3" >Pikes Peak Property Management</h2>
-                    <p>3615 E Uintah St.</p>
-                    <p>Colorado Springs, CO 80909</p>
-                    <p>(719)777-7777</p>
-                    <p>(719)888-8888</p><br>
-                    <figure class="contactMap" >
+                    <p>PO Box 31203</p>
+                    <p>Colorado Springs, CO 80931</p>
+                    <p>mgmt.ppre2000@gmail.com</p>
+                    <div class="contactMap">
                         <img src="images/birchwoodmap.png" alt="Pikes Peak Property Management Map" width="300px" height="300px">
-                    </figure>
+                    </div>
                 </div>
                 <section id="contactform">
                         <p>For more information on a specific property, please feel free to 
