--- a/properties.html
+++ b/properties.html
@@ -76,7 +76,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                     <!--TOP LEFT HEADING INFORMATION-->
                     <div class="propHeading">
                         <h1 id="movePageLower">Birchwood Village Apartments</h1>
-                        <h2>3615-3618 E Uintah St.<br>Colorado Springs, CO 80909<br>(719) 777-7777</h2>
+                        <h2>3615-3618 E Uintah St.<br>Colorado Springs, CO 80909<br>Phone: (719)596-2156<br>Fax: (719)596-3732</h2>
                         <!--CONTACT PROPERTY BUTTON-->
                         <form>
                             <input type="button" id="contactProperty" value="Contact Property" onclick="birchwoodDirect()">
@@ -149,7 +149,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                     <!--TOP LEFT HEADING INFORMATION-->
                     <div class="propHeading">
                         <h1 id="movePageLower2">Fountain Terrace Apartments</h1>
-                        <h2>3209-3211 E Fountain Blvd<br>Colorado Springs, CO 80910<br>(719) 777-7777</h2>
+                        <h2>3209-3211 E Fountain Blvd<br>Colorado Springs, CO 80910<br>Phone: (719)471-7001<br>Fax: (719)358-8085</h2>
                         <!--CONTACT PROPERTY BUTTON-->
                         <form>
                             <input type="button" id="contactProperty" value="Contact Property" onclick="FountainTerraceDirect()">
@@ -220,7 +220,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                     <!--TOP LEFT HEADING INFORMATION-->
                     <div class="propHeading">
                         <h1 id="movePageLower3">Pinewood Village</h1>
-                        <h2>3105 E Dale St<br>Colorado Springs, CO 80909<br>(719) 777-7777</h2>
+                        <h2>3105 E Dale St<br>Colorado Springs, CO 80909<br>Phone: (719)596-2156<br>Fax: (719)596-3732</h2>
                         <!--CONTACT PROPERTY BUTTON-->
                         <form>
                             <input type="button" id="contactProperty" value="Contact Property" onclick="pinewoodDirect()">
