--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="user-scalable=yes">
             <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
         <title>Pikes Peak Property Management Home Page</title>
         <link rel="stylesheet" href="CSS/style.css" media="screen" />
@@ -101,13 +102,14 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
             <div id="hours">
                     <ul>
                         <li class="hours" id="hours-top">Hours</li>
-                        <li class="hours" id="hours">Monday: 9am - 4pm</li>                        
-                        <li class="hours" id="hours">Tuesday: 9am - 4pm</li>
-                        <li class="hours" id="hours">Wednesday: 9am - 4pm</li>
-                        <li class="hours" id="hours">Thursday: 9am - 4pm</li>
-                        <li class="hours" id="hours">Friday: 9am - 4pm</li>
-                        <li class="hours" id="hours">Saturday: 11am - 3pm</li>
+                        <li class="hours" id="hours">Monday: 1pm - 4pm</li>                        
+                        <li class="hours" id="hours">Tuesday: 1pm - 4pm</li>
+                        <li class="hours" id="hours">Wednesday: 1pm - 4pm</li>
+                        <li class="hours" id="hours">Thursday: 1pm - 4pm</li>
+                        <li class="hours" id="hours">Friday: 1pm - 4pm</li>
+                        <li class="hours" id="hours">Saturday: 1pm - 4pm</li>
                         <li class="hours" id="hours">Sunday: Closed</li>
+                        <li class="hours" id="hours"><strong>Please email for Appointments</strong></li>
             </div>
         </main>
     </section>
