added contact info to home page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                 </ul>
             </nav>
             <section id="Nametop">
-                <h1>Pikes Peak Property Management, LLC</h1>
+                <h1>Pikes Peak Real Estate Sales & Property Management, LLC</h1>
             </section>
         </header>
 
@@ -65,6 +65,17 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                         I consider this community an excellent place to reside and would love to share with you 
                         my enthusiasm for the many neighborhoods that encompass the area. I pride myself on providing 
                         nparalleled service and look forward to developing a long-term relationship with you.</p>
+                </section>
+                <section id="welcome_contact">
+                    <h2 class="titleHeading3">Contact Us</h2>
+                    <p style="color: white; font-size: 1rem">Pikes Peak Real Estate Sales & property Mgmt, LLC<br>
+                        Agent: Yolanda Smith<br>
+                        651-A S. Academy Blvd. #300<br>
+                        Colorado Springs, CO 80906<br>
+                        Phone: 719-310-8302<br>
+                        Broker ID: 40042765<br>
+                    </p>
+
                 </section>
             </section>
             <section id="carousel">
