--- a/properties.html
+++ b/properties.html
@@ -36,7 +36,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
             <!--PROPERTY 1-->
             <div id="propSummary1" class="propertiesPic">
                 <figure>
-                    <img src="images/birchwood/frontpic1.jpg" alt="property 1" onclick="loadBirchwood()">
+                    <img src="images/birchwood/frontpic1.jpg" alt="property 1">
                 </figure>
                 <div class="propertiesDefinition">
                     <h4>Birchwood Apartments</h4>
@@ -45,7 +45,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
             <!--PROPERTY 2-->
             <div id="propSummary2" class="propertiesPic">
                 <figure>
-                    <img src="images/fountain terrace/frontpic1.jpg" alt="property 1" onclick="apartments2()">
+                    <img src="images/fountain terrace/frontpic1.jpg" alt="property 1">
                 </figure>
                 <div class="propertiesDefinition">
                     <h4>Fountain Terrace</h4>
@@ -54,7 +54,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
             <!--PROPERTY 3-->
             <div id="propSummary3" class="propertiesPic">
                 <figure>
-                    <img src="images/pinewood/frontpic1.jpg" alt="property 1" onclick="apartments3()">
+                    <img src="images/pinewood/frontpic1.jpg" alt="property 1">
                 </figure>
                 <div class="propertiesDefinition">
                     <h4>Pinewood Village</h4>
@@ -63,7 +63,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
             <!--PROPERTY 4-->     
             <div id="propSummary4" class="propertiesPic">
                 <figure>
-                    <img src="images/Property/Kearney/frontpic.jpg" alt="Kearney" onclick="apartments4()">
+                    <img src="images/Property/Kearney/frontpic.jpg" alt="Kearney">
                 </figure>
                 <div class="propertiesDefinition">
                     <h4>Single Family Home Properties</h4>
