Changed all PPRE Title Naming

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
                 </ul>
             </nav>
             <section id="Nametop">
-                <h1>Pikes Peak Property Management, LLC</h1>
+                <h1>Pikes Peak Real Estate Sales & Property Management, LLC</h1>
             </section>
         </header>
             <main class="classicborder">
@@ -32,7 +32,7 @@
                     <img src="images/cs5.png">
                 </figure>               
                 <div id="aboutsection">
-                    <h2 class="titleHeading3 fontBig" >Why Choose Pikes Peak Property Management</h2>
+                    <h2 class="titleHeading3 fontBig" >Why Choose Pikes Peak Real Estate Sales & Property Management</h2>
                     <p class="fontMedium normal " >In these quickly changing times, you need an aggressive property management team who can stay 
                         ahead of the game. Pikes Peak Property Management, with over 20 years of experience in the 
                         area with loyal and long-term clientele. We provide each property with separate accounting.<br><br>
@@ -62,7 +62,7 @@
             </main>
         </section>
         <footer>
-                <h5>Copyright 2016: Pikes Peak Property Management</h5>
+                <h5>Copyright 2016: Pikes Peak Real Estate Sales & Property Management, LLC</h5>
         </footer>
     </body>  
 </html>
