--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
         <main class="classicborder">
             <section id="welcome">
                 <section id="welcomepage">
-                    <h2 class="titleHeading3">Welcome to Pikes Peak Property Managment</h2>
+                    <h2 class="titleHeading3">Welcome to Pikes Peak Real Estate Sales & Property Managment</h2>
                     <p>Thanks for visiting my website. My local expertise and broad real estate experience will 
                         benefit you whether you are serious about buying or selling a home at this time, or are a 
                         returning client checking out the many homeowner resources we offer.<br><br>
@@ -126,7 +126,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
     </section>
 <!--FOOTER OF PAGE///////////////////////////////////////////////////////////////////////////////-->
         <footer>
-                <h5>Copyright 2016: Pikes Peak Property Management</h5>
+                <h5>Copyright 2016: Pikes Peak Real Estate Sales & Property Management, LLC</h5>
         </footer>
     </body>
 </html>
