--- a/properties.html
+++ b/properties.html
@@ -26,7 +26,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
                 </ul>
             </nav>
             <section id="Nametop">
-                <h1>Pikes Peak Property Management, LLC</h1>
+                <h1>Pikes Peak Real Estate Sales & Property Management, LLC</h1>
             </section>
         </header>
         <main id="propertyHousing">
@@ -311,7 +311,7 @@ SCROLLS WITH THE PAGE (ALL CONTENT WIL BE ON ONE PAGE///////////////////////////
         </section>
 <!--FOOTER OF PAGE///////////////////////////////////////////////////////////////////////////////-->
         <footer>
-                <h5>Copyright 2016: Pikes Peak Property Management</h5>
+                <h5>Copyright 2016: Pikes Peak Real Estate Sales & Property Management, LLC</h5>
         </footer>  
         <script src="js/properties.js"></script>  
     </body>
