--- a/contact.html
+++ b/contact.html
@@ -32,13 +32,13 @@ if($_POST["submit"]) {
                 </ul>
             </nav>
             <section id="Nametop">
-                <h1>Pikes Peak Property Management, LLC</h1>
+                <h1>Pikes Peak Real Estate Sales & Property Management, LLC</h1>
             </section>
         </header>
 
             <main id="contactinfo">
                 <div id="contactcompanyinfo">
-                    <h2 class="titleHeading3" >Pikes Peak Property Management</h2>
+                    <h2 class="titleHeading3" >Pikes Peak Real Estate Sales & Property Management, LLC</h2>
                     <p>PO Box 31203</p>
                     <p>Colorado Springs, CO 80931</p>
                     <p>mgmt.ppre2000@gmail.com</p>
@@ -89,7 +89,7 @@ if($_POST["submit"]) {
             </main>
         </section>
         <footer>
-                <h5>Copyright 2016: Pikes Peak Property Management</h5>
+                <h5>Copyright 2016: Pikes Peak Real Estate Sales & Property Management, LLC</h5>
         </footer>
     </body>
 </html>
